bench/results/20260326-185445/ts-to-zig/server.stderr.log
parity_agent.zig:1222:13: error: local variable is never mutated
        var ordered = try allocator.alloc(f64, samples.len);
            ^~~~~~~
parity_agent.zig:1222:13: note: consider using 'const'
